# exconman

./: .gitignore  Cargo.toml  README.md  config.json  lemon.txt  modifier.json  modifier.txt  registry.json  registry.txt  test.txt
registry/: bspwm.json  registry.json
src/: args.rs  brain.rs  config.rs  functions.rs  main.rs  modifier.rs  old_main.rs  old_util.rs  parse.rs  registry.rs  setting.rs  util.rs  utilities.rs
