[package]
name = "exconman"
version = "0.1.0"
authors = ["Abu Khan <cmdwannabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
notify-rust = "4.0.0"
serde = "1.0.116"
serde_json = "1.0.57"
serde_derive = "1.0.116"
tilde-expand = "0.1.1"
regex = "1.3.9"
