[package]
name = "exconman"
version = "0.1.0"
authors = ["Abu Khan <cmdwannabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = "1.0.116"
serde_json = "1.0.57"
serde_derive = "1.0.116"
regex = "1.3.9"
shellexpand = "2.1.0"
